Remove some annoyed comments. Make project build under gcc & clang.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 project(colt CXX)
 cmake_minimum_required(VERSION 2.8)  
 
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  # using Clang
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  # using GCC
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+endif()
+
 #------------------------------------------------------------------------------
 # Boost include
 #------------------------------------------------------------------------------
@@ -10,21 +18,9 @@ set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
 
-# For some reason, this capitalized version gets totally
-# different behaviour, though it calls the same script.
-# Thanks CMAKE! This is in part intentional ... but I can't believe
-# this is the best option.
-# set(Boost_DEBUG ON)
-# set(Boost_FIND_QUIETLY OFF)
-# find_package(BOOST
-#              1.55.0
-#              COMPONENTS program_options
-# 						system
-#              REQUIRED)
-			 
 add_definitions( -DBOOST_ALL_NO_LIB )
 add_definitions( -DBOOST_ALL_DYN_LINK )
-# add_definitions( -DBOOST_TEST_DYN_LINK )
+
 find_package(Boost
             1.55.0
             COMPONENTS program_options
@@ -81,6 +77,5 @@ file(GLOB command_line_template_test
 
 add_executable("${PROJECT_NAME}_test" ${command_line_template_test})
 target_link_libraries("${PROJECT_NAME}_test" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${BOOST_SYSTEM_LIBRARY})
-
 
 		
